[tool.poetry]
name = "hypernerf-dev"
version = "0.1.0"
description = "Docker container to train and render hypernerf models"
authors = ["Steven Jackson <stevosaurus@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9, <3.10"
h5py = "^3.6.0"
tensorflow = "^2.7.0"
ipykernel = "^6.7.0"
mediapipe = "^0.8.9"
imageio = "^2.14.1"
nerfies = {path = "../nerfies", develop = true}
pycolmap = {path = "../pycolmap", develop = true}
jaxlib = {path = "./wheels/jaxlib-0.1.68-cp39-none-win_amd64.whl"}
plotly = "^5.5.0"
flax = "^0.4.0"
immutabledict = "^2.2.1"
mediapy = "^1.0.3"
hypernerf = {path = "../hypernerf", develop = true}
gin-config = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
